css/module/global.css
html {
    background: var(--theme-page-bg);
    scroll-behavior: smooth;
}

:target {
    scroll-margin-block: 24px;
}

@media screen and (width > 768px) {
    :target {
        scroll-margin-block: calc(var(--nav-h) + 24px);
    }
}

body {
    position: relative;
    line-height: var(--leading);
    background: var(--theme-page-bg-overlay);
    color: var(--theme-body);
    font-family: var(--font-base);
    font-optical-sizing: auto;
    font-size: var(--text-size-base);
    font-variation-settings: 'wdth' 100;
    font-weight: var(--font-regular);
}

body::after {
    content: '';
    position: absolute;
    inset: 0;
    background: var(--theme-page-bg-accent-overlay);
    opacity: 0.5;
    pointer-events: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--font-display);
}

hr {
    background-color: var(--theme-border);
}

.u-wrapper {
    box-sizing: content-box;
    margin-inline: auto;
    padding-inline: var(--grid-gutter);
    max-width: var(--grid-max-width);
}

.u-grid {
    display: grid;
    gap: var(--grid-gutter);
}

.u-flex-spacer {
    flex: 1 1 auto;
}

.u-sq-12 {
    flex-basis: 12px;
    width: 12px;
    height: 12px;
}

.u-sq-20 {
    flex-basis: 20px;
    width: 20px;
    height: 20px;
}

/* --- Logo */
.jmap-logo {
    display: flex;
    align-items: center;
}
.jmap-logo__icon {
    fill: var(--theme-accent);
}
.jmap-logo__text {
    fill: var(--theme-logo-text);
}

